--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,6 +1,21 @@
 .main-header {
-	@media #{$mobile-only} {
-		border-bottom: 1px solid #d9d9d9;
+	position: relative;
+
+	&--has-no-separator {
+		--has-separator: none;
+	}
+
+	&::after {
+		@media #{$mobile-only} {
+			content: var(--has-separator, "");
+			position: absolute;
+			bottom: -1px;
+			right: 0;
+			width: 100vw;
+			height: 1px;
+			background: #d9d9d9;
+			box-shadow: 100vw 0 0 0 #d9d9d9;
+		}
 	}
 }
 
@@ -28,7 +43,7 @@
 	@media #{$mobile-only} {
 		display: grid;
 		grid-template-columns: 1fr auto 1fr;
-		margin-block: 11px 12px;
+		margin-block: 11px;
 	}
 
 	@media #{$not-mobile} {
