fix promo block

--- a/source/sass/blocks/cat-energy-description.scss
+++ b/source/sass/blocks/cat-energy-description.scss
@@ -1,180 +1,172 @@
 .cat-energy-description {
-	display: grid;
 	position: relative;
+	font-family: var(--accent-font);
+	margin-bottom: 20px;
 
 	@media #{$mobile-only} {
-		&::after {
-			content: "";
-			position: absolute;
-			width: 100%;
-			height: 302px;
-			background: linear-gradient(
-				rgb(104 183 56 / 0.85),
-				rgb(104 183 56 / 0.85)
-			),
-				var(--bg-image) no-repeat center / contain,
-				linear-gradient(
-				rgb(62 61 66),
-				rgb(62 61 66));
+		position: relative;
+		color: #ffffff;
+	}
 
-			@include bg-image("cat-background");
-		}
+	@media #{$tablet-only} {
+		--has-bg: none;
+		margin-bottom: -2px;
 	}
 
 	@media #{$desktop-only} {
-		margin-bottom: 281px;
-		grid-template-columns: repeat(2, 1fr);
+		--bg-height: 694px;
+		--bg-width-decrement: 50%;
+		--cat-position: left 0px;
+		--cat-size: 1040px var(--bg-height);
+		position: static;
+		margin-bottom: 134px;
+	}
 
-		&::after {
-			content: "";
-			position: absolute;
-			width: 50vw;
-			height: 696px;
-			background: linear-gradient(
+	@include bg-image("cat-background");
+
+	&::after {
+		content: var(--has-bg, "");
+		position: absolute;
+		z-index: -1;
+		left: var(--bg-width-decrement, 0);
+		right: 0;
+		top: 0;
+		height: var(--bg-height, 302px);
+		background:
+			linear-gradient(
 				rgb(104 183 56 / 0.85),
 				rgb(104 183 56 / 0.85)
 			),
-				var(--bg-image) no-repeat center / contain,
-				linear-gradient(
+			var(--bg-image) no-repeat var(--cat-position, center) / var(--cat-size, contain),
+			linear-gradient(
 				rgb(62 61 66),
-				rgb(62 61 66));
+				rgb(62 61 66)
+			);
+	}
+}
 
-			@include bg-image("cat-background");
-			z-index: 0;
-			top: -170px;
-			right: 0;
-			left: 50vw;
-		}
+.cat-energy-description__container {
+	display: grid;
+
+	@media #{$desktop-only} {
+		grid-template-columns: repeat(2, 1fr);
 	}
 }
 
 .cat-energy-description__wrapper {
-	@media #{$not-desktop} {
+	@media #{$mobile-only} {
 		display: contents;
+	}
+
+	@media #{$not-mobile} {
+		z-index: 1;
+		display: grid;
+		padding-inline: 88px;
+	}
+
+	@media #{$desktop-only} {
+		place-self: start;
+		padding-inline: 80px;
 	}
 }
 
 .cat-energy-description__title {
-	font-family: "Oswald", sans-serif;
+	font-family: var(--accent-font);
 	font-weight: 400;
 	font-size: 36px;
 	line-height: 36px;
-	text-align: center;
-	color: #ffffff;
-	margin: 0;
-	padding: 27px 20px 25px 20px;
-	z-index: 1;
+	margin-block: 28px;
 
-	@media #{$tablet-only} {
-		grid-column: 1/2;
+	@media #{$mobile-only} {
+		text-align: center;
+	}
+
+	@media #{$not-mobile} {
+		margin-block: 32px;
 		font-size: 60px;
 		line-height: 60px;
-		text-align: left;
-		color: rgb(0 0 0 / 1);
-		padding-top: 62px;
-		margin: 0 0 0 80px;
-		padding-inline: 0;
+		color: #000000;
 	}
 
 	@media #{$desktop-only} {
-		font-size: 60px;
-		line-height: 60px;
-		text-align: left;
-		color: rgb(0 0 0 / 1);
-		padding-top: 111px;
-		padding-left: 190px;
-		padding-bottom: 0;
+		margin-block: 53px;
 	}
 }
 
 .cat-energy-description__text {
-	font-family: "Oswald", sans-serif;
+	margin-top: -4px;
 	font-size: 14px;
 	line-height: 14px;
-	color: #ffffff;
-	text-align: center;
+	font-weight: 400;
 	text-transform: uppercase;
-	margin: 0;
 
 	@media #{$mobile-only} {
-		z-index: 1;
-		padding-inline: 42px;
-	}
-
-	@media #{$tablet-only} {
-		font-size: 20px;
-		line-height: 20px;
-		color: rgb(0 0 0 / 1);
-		text-align: left;
-		grid-column: 1/2;
-		padding-left: 89px;
-		padding-block: 41px 20px;
-		margin: 0;
-	}
-
-	@media #{$desktop-only} {
-		text-align: left;
-		text-transform: uppercase;
-		z-index: 1;
-		color: rgb(0 0 0 / 1);
-		padding-block: 40px 52px;
-		padding-left: 190px;
-	}
-}
-
-.cat-energy-description__img-wrapper {
-	@media #{$mobile-only} {
-		z-index: 5;
+		text-align: center;
 	}
 
 	@media #{$not-mobile} {
-		z-index: 2;
+		margin-block: 9px;
+		font-size: 20px;
+		line-height: 20px;
+		color: #000000;
+	}
+
+	@media #{$desktop-only} {
+		margin-top: -13px;
 	}
 }
 
 .cat-energy-description__img {
-	@media #{$mobile-only} {
-		display: block;
-		padding-top: 29px;
-		margin-inline: auto;
-	}
+	display: block;
+	margin: 29px auto 3px;
 
-	@media #{$tablet-only} {
-		grid-row: 3/4;
-		grid-column: 1/2;
+	@media #{$not-mobile} {
+		margin-top: -83px;
 	}
 
 	@media #{$desktop-only} {
-		position: absolute;
-		display: block;
-		top: 156px;
-		left: 570px;
+		margin-top: -30px;
+		margin-left: -162px;
 	}
 }
 
 .cat-energy-description__button {
+	display: block;
+	padding: 11px 22px;
+	font-family: var(--accent-font);
+	font-size: 14px;
+	line-height: 18px;
+	color: #ffffff;
+	text-align: center;
+	text-transform: uppercase;
+	text-decoration: none;
+	background-color: #68b738;
+
 	@media #{$mobile-only} {
-		padding: 7px 44px;
-		order: 4;
+		order: 1;
 	}
 
-	@media #{$tablet-only} {
+	@media #{$not-mobile} {
+		z-index: 1;
+		margin-top: 40px;
+		margin-right: auto;
 		font-size: 20px;
 		line-height: 20px;
-		font-weight: 400;
-		grid-row: 3/4;
-		grid-column: 1/2;
-		position: absolute;
-		top: 25px;
-		left: 60px;
-		padding: 14px 26px;
-		z-index: 5;
+		padding: 17px 26px;
 	}
 
 	@media #{$desktop-only} {
-		padding: 14px 26px;
-		order: 4;
-		margin-left: 190px;
-		margin-bottom: 185px;
+		margin-top: 43px;
+		font-size: 20px;
+		line-height: 20px;
+	}
+
+	&:hover {
+		background-color: #5eaa2f;
+	}
+
+	&:active {
+		background-color: #5eaa2f;
+		color: rgba(255 255 255 / 0.3);
 	}
 }
