--- a/source/sass/blocks/field.scss
+++ b/source/sass/blocks/field.scss
@@ -20,4 +20,16 @@
 		padding: 11px 20px;
 		height: 52px;
 	}
+
+	&:hover {
+		box-shadow: inset 0 0 0 1px #cdcdcd;
+	}
+
+	&:focus {
+		box-shadow: inset 0 0 0 2px #000000;
+	}
+
+	&--error {
+		box-shadow: inset 0 0 0 2px #ff8282;
+	}
 }
