--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -75,7 +75,7 @@
 		display: block;
 		width: 40px;
 		height: 40px;
-		background-image: url("/icons/stack.svg#tick-checkbox");
+		background-image: url("../../icons/stack.svg#tick-checkbox");
 	}
 
 	@media #{$mobile-only} {
