--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,29 +1,34 @@
 .advantages {
+	padding-bottom: 28px;
+
+	@media #{$not-mobile} {
+		padding-bottom: 6px;
+	}
+
 	@media #{$desktop-only} {
-		margin-bottom: 50px;
+		padding-bottom: 3px;
 	}
 }
 
 .advantages__list {
-	font-family: "Oswald", sans-serif;
-	font-weight: 400;
-	color: rgb(0 0 0 / 1);
 	text-transform: none;
 	list-style-type: none;
-	text-align: left;
 	display: grid;
-	gap: 24px;
-	padding: 0;
+	padding: 22px 0;
 	margin: 0;
+	gap: 20px;
 
-	@media #{$desktop-only} {
-		grid-template-columns: repeat(4, 1fr);
-		gap: 80px;
+	@media #{$not-mobile} {
+		grid-template-columns: repeat(2, 1fr);
+		row-gap: 77px;
+		column-gap: 60px;
+		padding: 41px 0;
+		counter-reset: advantages;
 	}
 
-	@media #{$tablet-only} {
-		grid-template-columns: repeat(2, 1fr);
-		gap: 37px 137px;
+	@media #{$desktop-only} {
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		column-gap: 80px;
 	}
 }
 
@@ -33,7 +38,7 @@
 	font-size: 36px;
 	line-height: 40px;
 	color: #000000;
-	margin-block: 20px 40px;
+	margin-block: 19px;
 
 	@media #{$not-mobile} {
 		font-size: 60px;
@@ -50,134 +55,71 @@
 }
 
 .advantages__item {
-	font-family: "Lato", sans-serif;
+	color: #444444;
+	font-family: var(--main-font);
+	display: grid;
+	gap: 20px;
+	place-items: start;
 	font-size: 14px;
-	font-weight: 400;
 	line-height: 18px;
-	text-align: left;
-	color: var(--main-color);
-	position: relative;
-	padding-left: 80px;
+
+	@media #{$mobile-only} {
+		grid-template-columns: auto 1fr;
+	}
+
+	@media #{$not-mobile} {
+		--icon-size: 80px;
+		position: relative;
+		grid-template-rows: auto 1fr;
+		gap: 30px;
+		min-height: 240px;
+		font-size: 16px;
+		line-height: 24px;
+		counter-increment: advantages;
+	}
+
+	@media #{$tablet-only} {
+		padding-right: 78px;
+	}
+
+	&--icon-leaf {
+		--icon: url("../../icons/stack.svg#leaf");
+	}
+
+	&--icon-pot {
+		--icon: url("../../icons/stack.svg#pot");
+	}
+
+	&--icon-cutlery {
+		--icon: url("../../icons/stack.svg#cutlery");
+	}
+
+	&--icon-alarm {
+		--icon: url("../../icons/stack.svg#alarm");
+	}
 
 	&::before {
 		content: "";
 		display: block;
+		align-self: center;
+		width: var(--icon-size, 60px);
+		height: var(--icon-size, 60px);
+		background: var(--accent-color) var(--icon) no-repeat center / 32px 32px;
+	}
+
+	&::after {
 		position: absolute;
-		width: 60px;
-		height: 60px;
-		background-color: var(--accent-color);
-		top: -3px;
-		left: -1px;
-	}
+		z-index: -1;
+		right: 0;
+		font-family: var(--accent-font);
+		font-size: 280px;
+		line-height: 1;
+		color: #f2f2f2;
 
-	&--icon-leaf::after {
-		content: "";
-		display: block;
-		position: absolute;
-		width: 30px;
-		height: 32px;
-		background-image: url("/icons/stack.svg#leaf");
-		top: 10px;
-		left: 14px;
-	}
-
-	&--icon-pot::after {
-		content: "";
-		display: block;
-		position: absolute;
-		width: 30px;
-		height: 32px;
-		background-image: url("/icons/stack.svg#pot");
-		top: 10px;
-		left: 14px;
-	}
-
-	&--icon-cutlery::after {
-		content: "";
-		display: block;
-		position: absolute;
-		width: 30px;
-		height: 32px;
-		background-image: url("/icons/stack.svg#cutlery");
-		top: 10px;
-		left: 14px;
-	}
-
-	&--icon-alarm::after {
-		content: "";
-		display: block;
-		position: absolute;
-		width: 30px;
-		height: 32px;
-		background-image: url("/icons/stack.svg#alarm");
-		top: 10px;
-		left: 14px;
-	}
-
-	@media #{$desktop-only} {
-		font-size: 16px;
-		line-height: 24px;
-		padding: 151px 26px 57px 0;
-		width: 248px;
-
-		&::before {
-			width: 80px;
-			height: 80px;
-			top: 70px;
-			left: -1px;
-		}
-
-		&--icon-leaf::after {
-			top: 94px;
-			left: 23px;
-		}
-
-		&--icon-pot::after {
-			top: 94px;
-			left: 23px;
-		}
-
-		&--icon-cutlery::after {
-			top: 94px;
-			left: 23px;
-		}
-
-		&--icon-alarm::after {
-			top: 94px;
-			left: 23px;
-		}
-	}
-
-	@media #{$tablet-only} {
-		width: 245px;
-		padding: 151px 26px 57px 0;
-		z-index: 3;
-
-		&::before {
-			width: 60px;
-			height: 60px;
-			top: -3px;
-			left: -1px;
-		}
-
-		&--icon-leaf::after {
-			top: 10px;
-			left: 14px;
-		}
-
-		&--icon-pot::after {
-			top: 10px;
-			left: 14px;
-		}
-
-		&--icon-cutlery::after {
-			top: 10px;
-			left: 14px;
-		}
-
-		&--icon-alarm::after {
-			top: 10px;
-			left: 14px;
+		@media #{$not-mobile} {
+			content: counter(advantages);
+			top: -40px;
+			left: 115px;
 		}
 	}
 }
