--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,218 +1,156 @@
 .example {
-	background-color: rgb(234 234 234);
+	--bg-color: #eaeaea;
+	color: #000000;
+	position: relative;
+	padding-bottom: 40px;
 
 	@media #{$not-mobile} {
-		background-color: #ffffff;
+		--bg-top-shift: calc(100% - 462px);
+		padding-bottom: 100px;
 	}
 
-	@media #{$mobile-only} {
-		padding-bottom: 40px;
-		margin-top: 49px;
+	@media #{$tablet-only} {
+		--bg-color: #ffffff;
+		border-top: 1px solid #e6e6e6;
+	}
+
+	@media #{$desktop-only} {
+		--bg-top-shift: 158px;
+		padding-bottom: 0;
+	}
+
+	&::before {
+		content: "";
+		position: absolute;
+		z-index: -1;
+		right: 0;
+		bottom: 0;
+		top: var(--bg-top-shift, 0);
+		width: 100vw;
+		background-color: hsl(0 0% 92%);
+		box-shadow: 100vw 0 0 0 hsl(0 0% 92%);
+	}
+}
+
+.example__container {
+	display: grid;
+
+	@media #{$desktop-only} {
+		--bg-top-shift: 236px;
+		grid-template-columns: auto 560px;
+		gap: 224px;
 	}
 }
 
 .example__title {
-	font-family: "Oswald", sans-serif;
-	font-weight: 400;
-	font-size: 36px;
-	line-height: 40px;
-	color: rgb(0 0 0 / 1);
-	text-transform: none;
-	text-align: left;
-
-	@media #{$mobile-only} {
-		padding-block: 25px 40px;
-	}
-
-	@media #{$not-mobile} {
-		font-size: 60px;
-		line-height: 60px;
-		margin-block: 0;
-	}
+	margin-top: 24px;
+	margin-bottom: 40px;
 
 	@media #{$tablet-only} {
-		padding-block: 43px 63px;
+		margin-top: 43px;
+		margin-bottom: 63px;
 	}
 
 	@media #{$desktop-only} {
-		padding-block: 69px 76px;
-	}
-}
-
-.example__main-wrapper {
-	@media #{$tablet-only} {
-		background: linear-gradient(to top, #eaeaea 50%, #ffffff 50%);
-	}
-
-	@media #{$desktop-only} {
-		background-color: #eaeaea;
-	}
-}
-
-
-.example__wrapper {
-	display: flex;
-
-	@media #{$mobile-only} {
-		gap: 20px;
-	}
-
-	@media #{$not-desktop} {
-		flex-direction: column;
-		align-items: center;
-	}
-
-	@media #{$desktop-only} {
-		gap: 224px;
-		padding-bottom: 75px;
-	}
-}
-
-.example__result-list {
-	margin: 0;
-	list-style-type: none;
-	display: grid;
-
-	@media #{$mobile-only} {
-		grid-template-columns: repeat(2, 1fr);
-		gap: 20px 32px;
-		margin: 0;
-	}
-
-	@media #{$tablet-only} {
-		grid-template-columns: 162px 162px 1fr;
-		gap: 42px;
-	}
-
-	@media #{$desktop-only} {
-		gap: 42px 55px;
-		grid-template-columns: 162px 162px;
+		margin-bottom: 145px;
 	}
 }
 
 .example__description {
-	font-size: 16px;
-	line-height: 24px;
-	margin: 0;
+	font-size: 14px;
+	line-height: 18px;
+	color: #444444;
+	font-family: var(--main-font);
 
-	@media #{$mobile-only} {
-		margin-block: 0 10px;
-		font-size: 14px;
-		line-height: 18px;
-	}
-
-	@media #{$tablet-only} {
-		margin-bottom: 40px;
-	}
-
-	@media #{$desktop-only} {
-		padding-block: 70px;
-		width: 433px;
+	@media #{$not-mobile} {
+		font-size: 16px;
+		line-height: 24px;
 	}
 }
 
-.example__result-number {
-	font-family: "Oswald", sans-serif;
-	font-weight: 400;
-	text-transform: uppercase;
-	color: rgb(0 0 0 / 1);
-	margin: 0;
-
-	&--item {
-		order: 1;
-		font-size: 30px;
-		line-height: 37px;
-		text-align: center;
-	}
+.example__result-list {
+	margin-block: 20px;
+	display: grid;
+	text-align: center;
+	font-family: var(--accent-font);
 
 	@media #{$mobile-only} {
-		font-size: 24px;
-		line-height: 24px;
+		grid-template-columns: 1fr 1fr;
+		gap: 10px 32px;
+	}
 
-		&--total {
-			font-size: 14px;
-			line-height: 20px;
-			order: 2;
-		}
+	@media #{$not-mobile} {
+		margin-block: 54px 90px;
+		gap: 42px;
+	}
+
+	@media #{$tablet-only} {
+		grid-template-columns: 1fr 1fr 1fr 96px;
+	}
+
+	@media #{$desktop-only} {
+		grid-template-columns: repeat(2, 162px);
+		margin-block: 69px 70px;
 	}
 }
 
 .example__result-item {
-	font-family: "Oswald", sans-serif;
-	color: #000000;
-	display: flex;
-	flex-direction: column;
+	font-family: var(--accent-font);
+	font-size: 14px;
+	line-height: 20px;
+	text-align: center;
+	text-transform: uppercase;
+
+	@media #{$not-mobile} {
+		font-size: 20px;
+		line-height: 20px;
+	}
 
 	&--total {
-		text-align: right;
-		font-size: 20px;
-		font-weight: 400;
-		line-height: 20px;
-		color: #000000;
-		text-transform: uppercase;
-	}
+		--separator: ": ";
+		grid-column: span 2;
+		place-self: center;
+		display: flex;
 
-	&--item {
-		background-image: url("/icons/stack.svg#frame");
-		padding-top: 15px;
-	}
-
-	@media #{$mobile-only} {
-		display: grid;
-		gap: 8px;
-		position: relative;
-
-		&--total {
-			grid-column: 1/-1;
-			display: flex;
-			justify-content: center;
+		@media #{$tablet-only} {
+			flex-direction: column;
+			text-align: right;
+			place-self: start end;
+			gap: 10px;
+			margin-block: 10px;
 		}
 
 		@media #{$desktop-only} {
-			&--total {
-				display: flex;
-				gap: 45px;
-				grid-column: 1/3;
-				flex-direction: row;
-			}
+			justify-self: start;
+			gap: 60px;
+			margin-block: 4px;
 		}
 	}
 }
 
-.example__result-description {
-	&--item {
-		font-size: 14px;
-		font-weight: 400;
-		line-height: 14px;
-		text-align: center;
-		order: 2;
-		color: #444444;
-		margin-top: 11px;
+.example__result-key {
+	margin: 0;
+
+	&::after {
+		content: var(--separator);
+		white-space: pre;
+
+		@media #{$tablet-only} {
+			white-space: normal;
+		}
 	}
+}
 
-	@media #{$mobile-only} {
-		order: 2;
-		font-family: "Lato", sans-serif;
-		font-size: 12px;
-		font-weight: 400;
-		line-height: 12px;
-		text-align: center;
-		color: var(--main-color);
+.example__result-value {
+	margin: 0;
+}
 
-		&--total {
-			font-family: "Oswald", sans-serif;
-			font-size: 14px;
-			font-weight: 400;
-			line-height: 20px;
-			text-transform: uppercase;
-			text-align: center;
-			color: rgb(0 0 0 / 1);
-			order: 1;
-		}
+.example__compare {
+	margin: 0;
+	align-self: start;
+	justify-self: center;
 
-		&--item {
-			width: 77px;
-			margin: 0 auto;
-		}
+	@media #{$desktop-only} {
+		margin-top: 24px;
 	}
 }
