--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,10 +1,36 @@
-.map__iframe {
-	width: 100%;
-	border: 0;
-	display: block;
-	height: 400px;
+.map {
+	--map-width: 100%;
+	--map-height: 362px;
+	display: grid;
 
-	@media #{$mobile-only} {
-		height: 362px;
+	@media #{$not-mobile} {
+		--map-height: 400px;
 	}
+}
+
+.map__iframe {
+	grid-area: 1 / 1 / 2 / 2;
+	border: none;
+	display: block;
+	width: var(--map-width);
+	min-height: var(--map-height);
+}
+
+.map__wrapper {
+	@media #{$not-desktop} {
+		display: contents;
+	}
+
+	@media #{$desktop-only} {
+		grid-area: 1 / 1 / 2 / 2;
+	}
+}
+
+.map__image {
+	grid-area: 1 / 1 / 2 / 2;
+	display: block;
+	object-fit: contain;
+	object-position: center;
+	width: var(--map-width);
+	min-height: var(--map-height);
 }
