--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,10 +11,16 @@
 @import "./blocks/program-type.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/advantages.scss";
+@import "./blocks/line-feed.scss";
 @import "./blocks/example.scss";
-@import "./blocks/before-after-slider.scss";
+@import "./blocks/cartouche.scss";
+@import "./blocks/compare.scss";
+@import "./blocks/slider.scss";
 @import "./blocks/cooperation.scss";
+@import "./blocks/address.scss";
 @import "./blocks/main-footer.scss";
+@import "./blocks/social.scss";
+@import "./blocks/logo.scss";
 @import "./blocks/copyright.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/product-card.scss";
@@ -34,5 +40,5 @@
 @import "./blocks/comment.scss";
 @import "./blocks/map.scss";
 @import "./blocks/disabled.scss";
-@import "./blocks/heading";
+@import "./blocks/heading.scss";
 @import "./blocks/card-show-more.scss";
