--- a/source/templates/cooperation.twig
+++ b/source/templates/cooperation.twig
@@ -1,12 +1,16 @@
-<section class="cooperation {% if permalink != "index.html" %}cooperation--background{% endif %}">
-	<div class="cooperation__adress-wrapper page__centerer">
-		<h2 class="cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
-		<p class="cooperation__adress-adress">
-			ул. Большая Конюшенная, д. 19/8<span class="line-feed"></span> Санкт-Петербург
-		</p>
+<section class="cooperation">
+	<div class="cooperation__adress address page__centerer">
+		<div class="address__container {% if permalink != "index.html" %}address__container--bg_gray{% endif %}">
+			<h2 class="address__title">Приглашаем к сотрудничеству дилеров!</h2>
+			<div class="address__details">
+				ул. Большая Конюшенная, д. 19/8<br><span class="line-feed"></span> Санкт-Петербург
+			</div>
+		</div>
 	</div>
 	<div class="cooperation__adress-map map">
-		{% include "./picture.twig" with {name: "map", class: "map__img", alt: "Точка на карте по адресу Санкт-Петербург, ул. Большая Конюшенная, д. 19/8."} %}
+		<noscript class="map__wrapper page__centerer">
+			{% include "./picture.twig" with {name: "map", class: "map__image", alt: "Точка на карте по адресу Санкт-Петербург, ул. Большая Конюшенная, д. 19/8."} %}
+		</noscript>
 		<iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872586862!2d30.320853351538165!3d59.93871648178723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1672084773520!5m2!1sru!2sru" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>
 </section>
