--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -7,6 +7,10 @@
 	<title>{{ projectName }}: {{ pages[pageId].name }}</title>
 	{% include "./detect-format.twig" %}
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="icon" href="favicon.ico">
+	<link rel="icon" href="./favicons/icon.svg" type="image/svg+xml">
+	<link rel="apple-touch-icon" href="./favicons/180.png">
+	<link rel="manifest" href="./manifest.webmanifest">
 </head>
 
 <body class="page__body">
