--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ projectName }}: {{ pages[pageId].name }}</title>
 	{% include "./detect-format.twig" %}
+	<link rel="preload" href="./fonts/lato-regular.woff2" type="font/woff2" as="font" crossorigin>
+	<link rel="preload" href="./fonts/oswald-medium.woff2" type="font/woff2" as="font" crossorigin>
+	<link rel="preload" href="./fonts/oswald-regular.woff2" type="font/woff2" as="font" crossorigin>
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="icon" href="favicon.ico">
 	<link rel="icon" href="./favicons/icon.svg" type="image/svg+xml">
