--- a/source/sass/blocks/card-show-more.scss
+++ b/source/sass/blocks/card-show-more.scss
@@ -1,6 +1,7 @@
 .card-show-more {
 	@media #{$mobile-only} {
 		padding-bottom: 25px;
+		padding-top: 0;
 	}
 }
 
@@ -13,9 +14,17 @@
 	}
 
 	@media #{$tablet-only} {
-		padding: 52px 36px 39px 36px;
+		padding: 0 36px 39px 36px;
 		border: 2px solid #f2f2f2;
 		align-items: center;
+		margin-top: 80px;
+	}
+
+	@media #{$desktop-only} {
+		padding: 0 38px 38px 38px;
+		border: 2px solid #f2f2f2;
+		align-items: center;
+		margin-top: 82px;
 	}
 }
 
@@ -34,21 +43,37 @@
 		content: "";
 		display: block;
 		background: url("../../icons/stack.svg#plus");
-		position: absolute;
 		width: 30px;
 		height: 30px;
-		top: -50px;
-		left: 125px;
 	}
 
 	@media #{$mobile-only} {
-		margin: 59px 0 8px 0;
+		margin: 0 0 8px 0;
+
+		&::before {
+			margin: 25px auto;
+		}
 	}
 
 	@media #{$tablet-only} {
 		margin: 0;
-		margin-top: 111px;
 		width: 134px;
+
+		&::before {
+			width: 60px;
+			height: 60px;
+			margin: 60px auto;
+		}
+	}
+
+	@media #{$desktop-only} {
+		margin: 0;
+
+		&::before {
+			width: 60px;
+			height: 60px;
+			margin: 50px auto;
+		}
 	}
 }
 
@@ -62,6 +87,10 @@
 	@media #{$tablet-only} {
 		margin: 23px 0 0 0;
 		width: 165px;
+	}
+
+	@media #{$desktop-only} {
+		padding-block: 23px 87px;
 	}
 }
 
@@ -78,8 +107,12 @@
 	padding: 10px 20px;
 
 	@media #{$tablet-only} {
-		padding-inline: 80px;
+		padding-inline: 70px;
 		margin-top: 87px;
+	}
+
+	@media #{$desktop-only} {
+		padding-inline: 37px;
 	}
 
 	&:hover {
