--- a/source/sass/blocks/cat-energy-description.scss
+++ b/source/sass/blocks/cat-energy-description.scss
@@ -169,4 +169,9 @@
 		background-color: #5eaa2f;
 		color: rgba(255 255 255 / 0.3);
 	}
+
+	&:not([href]) {
+		background-color: #5eaa2f;
+		color: rgba(255 255 255 / 0.3);
+	}
 }
