--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -35,7 +35,7 @@
 	gap: 20px;
 }
 
-.contacts__label {
+.contacts__icon {
 	position: relative;
 
 	&--email::before {
@@ -44,9 +44,10 @@
 		display: block;
 		width: 20px;
 		height: 20px;
-		background-image: url("../../icons/stack.svg#mail");
+		mask: url("../../icons/stack.svg#mail");
+		background-color: #222222;
 		top: 14px;
-		left: 250px;
+		left: -50px;
 	}
 
 	&--phone::before {
@@ -55,30 +56,51 @@
 		display: block;
 		width: 20px;
 		height: 20px;
-		background-image: url("../../icons/stack.svg#phone");
+		mask: url("../../icons/stack.svg#phone");
+		background-color: #222222;
 		top: 14px;
-		left: 250px;
+		left: -50px;
 	}
 
 	@media #{$tablet-only} {
 		&--email::before {
-			left: 585px;
+			left: -70px;
 		}
 
 		&--phone::before {
-			left: 585px;
+			left: -70px;
 		}
 	}
 
 	@media #{$desktop-only} {
 		&--email::before {
-			left: 525px;
+			left: -60px;
 			z-index: 2;
 		}
 
 		&--phone::before {
-			left: 525px;
+			left: -60px;
 			z-index: 2;
+		}
+	}
+
+	&:focus {
+		&--email::before {
+			background-color: var(--acent-color);
+		}
+
+		&--phone::before {
+			background-color: var(--acent-color);
+		}
+	}
+
+	&--error {
+		&--email::before {
+			background-color: #ff8282;
+		}
+
+		&--phone::before {
+			background-color: #ff8282;
 		}
 	}
 }
