--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -8,13 +8,13 @@
 
 	@media #{$tablet-only} {
 		text-align: center;
-		background-color: #f2f2f2;
+		background: linear-gradient(transparent 81px, #f2f2f2 81px);
 		padding: 0 36px 39px 36px;
 	}
 
 	@media #{$desktop-only} {
 		text-align: center;
-		background-color: #f2f2f2;
+		background: linear-gradient(transparent 81px, #f2f2f2 81px);
 		padding: 0 38px 40px 38px;
 	}
 }
@@ -134,13 +134,13 @@
 
 	@media #{$tablet-only} {
 		order: 4;
-		padding: 10px 93px;
+		padding-block: 10px;
 		margin-top: 33px;
 	}
 
 	@media #{$desktop-only} {
 		order: 4;
-		padding: 10px 53px;
+		padding-block: 10px;
 		margin-top: 43px;
 	}
 }
