fixup! fix icons

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -60,24 +60,18 @@
 		--icon: url("../../icons/stack.svg#phone");
 	}
 
-	.contacts__email:focus + & {
-		background-color: var(--acent-color);
+	:where(.contacts__email, .contacts__phone):focus + & {
+		background-color: var(--accent-color);
 	}
 
-	.contacts__email--error:not(:disabled) + & {
-		background-color: #ff8282;
-	}
-
-	.contacts__phone:focus + & {
-		background-color: var(--acent-color);
-	}
-
-	.contacts__phone--error:not(:disabled) + & {
-		background-color: #ff8282;
+	:where(.contacts__email--error, .contacts__phone--error):not(:disabled) + & {
+		background-color: rgb(255 130 130);
 	}
 }
 
 .contacts__phone {
+	flex-grow: 1;
+
 	@media #{$mobile-only} {
 		width: 202px;
 	}
@@ -92,6 +86,8 @@
 }
 
 .contacts__email {
+	flex-grow: 1;
+
 	@media #{$mobile-only} {
 		width: 218px;
 		padding: 15px 52px 14px 13px;
