--- a/source/sass/blocks/additional-catalog.scss
+++ b/source/sass/blocks/additional-catalog.scss
@@ -1,7 +1,7 @@
 .additional-catalog__wrapper {
 	@media #{$desktop-only} {
 		display: grid;
-		grid-template-columns: 3fr 1fr;
+		grid-template-columns: repeat(4, 1fr);
 		column-gap: 80px;
 		margin-bottom: 86px;
 	}
@@ -9,21 +9,26 @@
 
 .additional-catalog__list {
 	display: grid;
+	gap: 18px;
 	list-style-type: none;
 	padding: 0;
 	border-bottom: 1px solid #cdcdcd;
 	margin: 0;
 
 	@media #{$mobile-only} {
-		gap: 19px;
 		padding-bottom: 19px;
 		margin-bottom: 35px;
 	}
 
 	@media #{$tablet-only} {
-		gap: 28px;
-		margin-bottom: 70px;
+		gap: 26px;
+		margin-bottom: 68px;
 		padding-bottom: 28px;
+	}
+
+	@media #{$desktop-only} {
+		grid-column: span 3;
+		gap: 0;
 	}
 }
 
@@ -38,7 +43,7 @@
 	@media #{$mobile-only} {
 		font-size: 24px;
 		line-height: 24px;
-		margin-block: 25px 36px;
+		margin-block: 25px 34px;
 	}
 
 	@media #{$tablet-only} {
