--- a/source/sass/blocks/additional-pruduct-card.scss
+++ b/source/sass/blocks/additional-pruduct-card.scss
@@ -1,3 +1,20 @@
+.additional-product-card {
+	display: grid;
+	border-top: 1px solid #cdcdcd;
+
+	@media #{$tablet-only} {
+		grid-template-columns: 1fr 1fr;
+		align-items: center;
+		padding-inline: 37px;
+	}
+
+	@media #{$desktop-only} {
+		grid-template-columns: 305px 305px 245px;
+		align-items: center;
+		gap: 20px;
+	}
+}
+
 .additional-product-card__label {
 	font-family: "Oswald", sans-serif;
 	font-weight: 400;
@@ -9,40 +26,78 @@
 	line-height: 20px;
 
 	@media #{$mobile-only} {
-		padding-block: 13px;
+		margin-block: 13px;
 		font-size: 16px;
 		line-height: 16px;
 	}
 
 	@media #{$tablet-only} {
-		padding-block: 26px;
+		margin-block: 26px;
 	}
 
 	@media #{$desktop-only} {
-		padding-block: 25px;
+		margin-block: 25px;
 	}
 }
 
 
 .additional-product-card__discription {
-	display: flex;
+	display: grid;
+	grid-template-columns: auto 61px;
+	gap: 20px;
 	justify-content: space-between;
+	font-size: 14px;
+	line-height: 14px;
 
 	@media #{$mobile-only} {
-		padding-bottom: 15px;
+		margin-bottom: 15px;
+	}
+
+	@media #{$not-mobile} {
+		grid-template-columns: 224px 61px;
+		font-size: 16px;
+		line-height: 20px;
 	}
 
 	@media #{$tablet-only} {
+		margin-top: 6px;
 		justify-content: end;
-		gap: 50px;
+		gap: 34px;
 	}
 
 	@media #{$desktop-only} {
-		padding-block: 28px 25px;
+		grid-template-columns: 224px 61px;
+		margin-block: 28px 23px;
+		text-align: left;
+	}
+}
+
+.additional-product-card__quantity {
+	margin: 0;
+
+	@media #{$tablet-only} {
+		text-align: end;
+	}
+}
+
+.additional-product-card__price {
+	margin: 0;
+	text-align: end;
+
+	@media #{$tablet-only} {
+		padding-right: 5px;
+	}
+
+	@media #{$desktop-only} {
+		text-align: start;
 	}
 }
 
 .additional-product-card__button {
+	padding: 10px;
+	font-size: 16px;
+	line-height: 20px;
+
 	@media #{$tablet-only} {
 		grid-column: 1/3;
 	}
@@ -51,31 +106,4 @@
 		height: 40px;
 		box-sizing: border-box;
 	}
-
-	padding: 10px 109px;
-}
-
-.additional-product-card {
-	display: grid;
-	border-top: 1px solid #cdcdcd;
-
-	@media #{$desktop-only} {
-		grid-template-columns: 1fr 1fr 1fr;
-		align-items: center;
-		gap: 40px;
-	}
-
-	@media #{$tablet-only} {
-		grid-template-columns: 1fr 1fr;
-		align-items: center;
-		padding-inline: 37px;
-	}
-}
-
-.additional-product-card__quantity {
-	margin: 0;
-}
-
-.additional-product-card__price {
-	margin: 0;
 }
